--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
+    "env-cmd": "^8.0.2",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.16",
     "multer": "^1.4.4",
+    "save-dev": "^0.0.1-security",
+    "sharp": "^0.30.5",
     "validator": "^13.7.0"
   },
   "devDependencies": {
